Fix hero container and add hover effects to images
Div holding h1 & paragraph elements was too small made bigger and also used same hover effects from buttons but on the images

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ header {
 }
 
 .hero-container {
-    width: 350px;
+    width: 450px;
 }
 
 .hero-container h2 {
@@ -174,6 +174,13 @@ header {
     height: 190px;
     margin-bottom: 10px;
     border-radius: 15px;
+    display: block;
+    position: relative;
+    transition: color 0.3s, transform 0.3s;
+}
+
+.box:hover {
+    transform: translateY(-20px);
 }
 
 .box img {
@@ -183,8 +190,11 @@ header {
 .box-align-1, .box-align-2, .box-align-3, .box-align-4, .text {
     text-align: center;
     font-size: 18px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    line-height: 1.4; 
+    margin-top: 5px;
+    text-align: center;
 }
-
 
 .quote-container {
     background-color: #E5E7EB;
